--- a/style.css
+++ b/style.css
@@ -1,12 +1,31 @@
+body {
+    background-color: #d5f0ea;
+}
+
+#header {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 18px;
+}
+
+#footer {
+    position: absolute;
+    bottom: 6px;
+    right: 12px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 18px;
+}
+
 #calculator, .display, .digits-div, .digits-row, .digits-last-row {
     display: flex;
 }
 
 #calculator {
     justify-content: center;
-    padding: 100px;
+    padding: 50px;
 }
-
 
 .digits-div { 
     width: 400px;
@@ -14,6 +33,7 @@
 }
 
 .display {
+    cursor: default;
     font-size: 30px;
     border: 1px solid black;
     height: 100px;
@@ -34,5 +54,7 @@
 .digit, .operator, .clear-btn, .equal-btn, .div-btn {
     width: 100px;
     height: 100px;
-    font-size: 30px;
+    font-size: 28px;
+    font-family: 'Courier New', Courier, monospace;
+    align-items: center;
 }
